# coding-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
cli/: Cargo.toml
cli/cmd/: Cargo.toml
cli/cmd/src/: main.rs
coding-common/: Cargo.toml
coding-common/src/: lib.rs  pair.rs  types.rs
coding-common/src/greet/: greet.rs
coding-common/src/math/: math.rs  mod.rs
coding-common/src/strings/: b.rs  check.rs  mod.rs
coding-common/tests/: math_test.rs  pair_test.rs  strings_test.rs
coding-common/tests/common/: mod.rs
coding-infra/: Cargo.toml
coding-infra/infra-nosql/: Cargo.toml
coding-infra/infra-rest/: Cargo.toml
coding-infra/infra-sql/: Cargo.toml
coding-usage/: Cargo.toml
coding-usage/src/: main.rs
coding-usage/src/main/: main.rs
coding-usage/src/web/: main.rs
coding-usage/tests/: db_sqlx_mysql_test.rs  db_sqlx_sqlite_test.rs  nosql_mongo_test.rs  nosql_redis_test.rs  nosql_rocksdb_test.rs  reqwest_test.rs  serde_test.rs
