[package]
name = "coding-usage"
version = "0.1.0"
edition = "2021"

[profile.release]
# 编译完成后剥离(strip)可执行文件中的调试符号和其他不必要的信息
strip = true
# 代码单元的数量
# codegen-units = 1
# 链接时优化(Link-Time Optimization)
# lto = true
# 优化级别
# opt-level = "z"

# 指定main入口
# [[bin]]
# name = "test"
# path = "src/main/main.rs"

[dependencies]
coding-common = { path = "../coding-common" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "sqlite", "postgres", "runtime-tokio"] }
r2d2 = "0.8"
redis = { version = "0.28.2", features = ["r2d2", "json", "tokio-comp"] }
futures = "0.3"
mongodb = { version = "3.2.0", features = ["sync"] }
# rocksdb = { version = "0.23.0", features = ["lz4"], default-features = false }
time = "0.3"
regex = "1.11"
axum= "0.8"
# cloudflare/quiche

[dev-dependencies]
tempfile = "3.1"